--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <link rel="apple-touch-icon" sizes="152x152" href="img/logo.png">
 
     
-    <meta property="og:url" content="https://contact.genevois-informatique.com/" />
+    <meta property="og:url" content="p_url" />
     <meta property="og:title"
-        content="Genevois Informatique" />
-    <meta property="og:description" content="Dépannage informatique, création de sites web, domotique et bien plus !" />
-    <meta property="og:image" content="https://send.papamica.fr/f.php?h=1_7u-jWK&p=1" />
+        content="p_name" />
+    <meta property="og:description" content="p_bio" />
+    <meta property="og:image" content="p_logo_link" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
 
